--- a/react-click-game/package.json
+++ b/react-click-game/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-click-game",
+  "homepage": "https://geochanto.github.io/react-click-game",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,6 +9,8 @@
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
