--- a/react-click-game/package.json
+++ b/react-click-game/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "bootstrap": "^4.1.2",
+    "gh-pages": "^1.2.0",
+    "reactstrap": "^6.3.0"
   },
   "scripts": {
     "predeploy": "npm run build",
